--- a/proto-walka/package.json
+++ b/proto-walka/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "vite",
     "preview": "vite preview",
-    "build": "vite build && move dist ../docs",                   
-    "rebuild": "vite build && rm -R ../docs && move dist ../docs",
+    "build": "vite build && cd .. && xcopy /y proto-walka/dist docs && cd proto-walka",
+    "rebuild": "vite build && rd /s /q ../docs && xcopy /y proto-walka/dist docs && cd proto-walka",
     "git": "git add . && git commit && git push origin main",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
